--- a/index.html
+++ b/index.html
@@ -4,13 +4,72 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>SoundCloud Banner Cutter</title>
     <meta property="og:type" content="website">
-    <meta property="og:title" content="사클커터! 배너를 짜르세양!!">
+    <meta property="og:title" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
     <meta property="og:description" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="stylesheet" href="./index.css">
+    <style>
+        .aboutPage {
+            display: none;
+        }
+        .root .aboutPage {
+            display: block;
+        }
+    </style>
 </head>
-
+    <div id="aboutPage" class="aboutPage mainPage">
+        <h1>설명</h1>
+        <h3>SoundCloud Banner Cutter</h3>
+        사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.<br >
+        es6 모듈과 바닐라 js 기반의 컴포넌트를 구현하고자 했습니당.<br >
+        <br>
+        <br>
+        <h1>github</h1>
+        <a target="_blank" href="https://github.com/daemyung6/SoundCloud-Banner-Cutter">https://github.com/daemyung6/SoundCloud-Banner-Cutter</a><br >
+        <br>
+        <br>
+        <h1>만든 사람</h1>
+        <img class="profile" src="./asset/img/profile.jpg" alt="">
+        <div class="link">
+            <img src="./asset/img/instagram.png" alt="">
+            <a target="_blank" href="https://www.instagram.com/hongdaemyung/">https://www.instagram.com/hongdaemyung/</a>
+        </div>
+        <div class="link">
+            <img src="./asset/img/soundcloud.png" alt="">
+            <a target="_blank" href="https://soundcloud.com/deletable">https://soundcloud.com/deletable</a>
+        </div>
+        <div class="link">
+            <img src="./asset/img/github.png" alt="">
+            <a target="_blank" href="https://github.com/daemyung6">https://github.com/daemyung6</a>
+        </div>
+        <br>
+        <br>
+        <h1>사용한 에셋 아이콘</h1>
+        image-upload.png<br >
+        <a target="_blank" href="https://www.flaticon.com/free-icon/gallery_8065934?term=upload&page=1&position=9&origin=search&related_id=8065934">https://www.flaticon.com/free-icon/gallery_8065934?term=upload&page=1&position=9&origin=search&related_id=8065934</a><br >
+        <br >
+        clip.png<br >
+        <a target="_blank" href="https://www.flaticon.com/free-icon/paper-clip_876210?term=clips&page=1&position=5&origin=tag&related_id=876210">https://www.flaticon.com/free-icon/paper-clip_876210?term=clips&page=1&position=5&origin=tag&related_id=876210</a><br >
+        <br >
+        visibility.png<br >
+        <a target="_blank" href="https://www.flaticon.com/free-icon/visibility_565654?term=visible&page=1&position=6&origin=search&related_id=565654">https://www.flaticon.com/free-icon/visibility_565654?term=visible&page=1&position=6&origin=search&related_id=565654</a><br >
+        <br >
+        bin.png<br >
+        <a target="_blank" href="https://www.flaticon.com/free-icon/bin_484611?term=delete&page=1&position=5&origin=search&related_id=484611">https://www.flaticon.com/free-icon/bin_484611?term=delete&page=1&position=5&origin=search&related_id=484611</a><br >
+        <br >
+        instagram<br >
+        <a target="_blank" href="https://www.flaticon.com/free-icon/instagram_2111463?term=sns&page=1&position=23&origin=search&related_id=2111463">https://www.flaticon.com/free-icon/instagram_2111463?term=sns&page=1&position=23&origin=search&related_id=2111463</a><br >
+        <br >
+        soundcloud<br >
+        <a target="_blank" href="https://www.flaticon.com/free-icon/soundcloud_145809?term=soundcloud&page=1&position=4&origin=search&related_id=145809">https://www.flaticon.com/free-icon/soundcloud_145809?term=soundcloud&page=1&position=4&origin=search&related_id=145809</a><br >
+        <br >
+        github<br >
+        <a target="_blank" href="https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609">https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609</a><br >
+        <br>
+        <br>
+        
+    </div>
 <body>
 </body>
-<script type="module" src="./app.js"></script>
+<script type="module" src="./1.0.0/app.js"></script>
 </html>
