--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
     <meta property="og:description" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css?1.0.0">
     <style>
         .aboutPage {
             display: none;
