--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
     <meta property="og:description" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
+    <meta property="og:image" content="https://daemyung6.github.io/soundcloudcutter/preview.png?ver=1">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="stylesheet" href="./index.css?1.0.0">
     <style>
