--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>SoundCloud Banner Cutter</title>
     <meta property="og:type" content="website">
-    <meta property="og:title" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
+    <meta property="og:title" content="SoundCloud Banner Cutter">
     <meta property="og:description" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
     <meta property="og:image" content="https://daemyung6.github.io/soundcloudcutter/preview.png?ver=1">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
