메타 태그 수정

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html lang="ko">
 
 <head>
+    <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <title>SoundCloud Banner Cutter</title>
+    <meta name="description" content="Seamless SoundCloud banner maker">
+    <meta name="keywords" content="Soundcloud, banner, header, image, maker, crop">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="SoundCloud Banner Cutter">
-    <meta property="og:description" content="사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.">
+    <meta property="og:title" content="Soundcloud Banner Cutter">
+    <meta property="og:description" content="Seamless Soundcloud banner maker">
     <meta property="og:image" content="https://daemyung6.github.io/soundcloudcutter/preview.png?ver=1">
+
+    <meta name="google-site-verification" content="Q7tRvlfpQsrovLAaBNe02QOqVOv1ln7_SDbuENjQDNI" />
+    
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="stylesheet" href="./index.css?1.0.0">
     <style>
