--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>SoundCloud Banner Cutter</title>
     <meta name="description" content="Seamless SoundCloud banner maker">
-    <meta name="keywords" content="Soundcloud, banner, header, image, maker, crop">
+    <meta name="keywords" content="Soundcloud, banner, header, image, maker, crop, seamless">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Soundcloud Banner Cutter">
     <meta property="og:description" content="Seamless Soundcloud banner maker">
