--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
+<!DOCTYPE html>
 <html lang="ko">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoundCloud Banner Cutter</title>
-    <meta name="description" content="Seamless SoundCloud banner maker">
-    <meta name="keywords" content="Soundcloud, banner, header, image, maker, crop, seamless">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Soundcloud Banner Cutter">
-    <meta property="og:description" content="Seamless Soundcloud banner maker">
-    <meta property="og:image" content="https://daemyung6.github.io/soundcloudcutter/preview.png?ver=1">
+    <meta name="description" content="Seamless SoundCloud banner maker" />
+    <meta name="keywords" content="Soundcloud, banner, header, image, maker, crop, seamless" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Soundcloud Banner Cutter" />
+    <meta property="og:description" content="Seamless Soundcloud banner maker" />
+    <meta property="og:image" content="https://daemyung6.github.io/soundcloudcutter/preview.png?ver=1" />
 
     <meta name="google-site-verification" content="Q7tRvlfpQsrovLAaBNe02QOqVOv1ln7_SDbuENjQDNI" />
-    
+
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="stylesheet" href="./index.css?1.0.0">
     <style>
@@ -25,22 +25,25 @@
         }
     </style>
 </head>
+<body>
     <div id="aboutPage" class="aboutPage mainPage">
         <h1>설명</h1>
         <h3>SoundCloud Banner Cutter</h3>
-        사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.<br >
-        es6 모듈과 바닐라 js 기반의 컴포넌트를 구현하고자 했습니당.<br >
+        사운드클라우드의 배너를 배경과 프로필이 이어지도록 자릅니다.<br>
+        es6 모듈과 바닐라 js 기반의 컴포넌트를 구현하고자 했습니당.<br>
         <br>
         <br>
         <h1>github</h1>
-        <a target="_blank" href="https://github.com/daemyung6/SoundCloud-Banner-Cutter">https://github.com/daemyung6/SoundCloud-Banner-Cutter</a><br >
+        <a target="_blank"
+            href="https://github.com/daemyung6/SoundCloud-Banner-Cutter">https://github.com/daemyung6/SoundCloud-Banner-Cutter</a><br>
         <br>
         <br>
         <h1>만든 사람</h1>
         <img class="profile" src="./asset/img/profile.jpg" alt="">
         <div class="link">
             <img src="./asset/img/instagram.png" alt="">
-            <a target="_blank" href="https://www.instagram.com/hongdaemyung/">https://www.instagram.com/hongdaemyung/</a>
+            <a target="_blank"
+                href="https://www.instagram.com/hongdaemyung/">https://www.instagram.com/hongdaemyung/</a>
         </div>
         <div class="link">
             <img src="./asset/img/soundcloud.png" alt="">
@@ -53,31 +56,37 @@
         <br>
         <br>
         <h1>사용한 에셋 아이콘</h1>
-        image-upload.png<br >
-        <a target="_blank" href="https://www.flaticon.com/free-icon/gallery_8065934?term=upload&page=1&position=9&origin=search&related_id=8065934">https://www.flaticon.com/free-icon/gallery_8065934?term=upload&page=1&position=9&origin=search&related_id=8065934</a><br >
-        <br >
-        clip.png<br >
-        <a target="_blank" href="https://www.flaticon.com/free-icon/paper-clip_876210?term=clips&page=1&position=5&origin=tag&related_id=876210">https://www.flaticon.com/free-icon/paper-clip_876210?term=clips&page=1&position=5&origin=tag&related_id=876210</a><br >
-        <br >
-        visibility.png<br >
-        <a target="_blank" href="https://www.flaticon.com/free-icon/visibility_565654?term=visible&page=1&position=6&origin=search&related_id=565654">https://www.flaticon.com/free-icon/visibility_565654?term=visible&page=1&position=6&origin=search&related_id=565654</a><br >
-        <br >
-        bin.png<br >
-        <a target="_blank" href="https://www.flaticon.com/free-icon/bin_484611?term=delete&page=1&position=5&origin=search&related_id=484611">https://www.flaticon.com/free-icon/bin_484611?term=delete&page=1&position=5&origin=search&related_id=484611</a><br >
-        <br >
-        instagram<br >
-        <a target="_blank" href="https://www.flaticon.com/free-icon/instagram_2111463?term=sns&page=1&position=23&origin=search&related_id=2111463">https://www.flaticon.com/free-icon/instagram_2111463?term=sns&page=1&position=23&origin=search&related_id=2111463</a><br >
-        <br >
-        soundcloud<br >
-        <a target="_blank" href="https://www.flaticon.com/free-icon/soundcloud_145809?term=soundcloud&page=1&position=4&origin=search&related_id=145809">https://www.flaticon.com/free-icon/soundcloud_145809?term=soundcloud&page=1&position=4&origin=search&related_id=145809</a><br >
-        <br >
-        github<br >
-        <a target="_blank" href="https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609">https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609</a><br >
+        image-upload.png<br>
+        <a target="_blank"
+            href="https://www.flaticon.com/free-icon/gallery_8065934?term=upload&page=1&position=9&origin=search&related_id=8065934">https://www.flaticon.com/free-icon/gallery_8065934?term=upload&page=1&position=9&origin=search&related_id=8065934</a><br>
+        <br>
+        clip.png<br>
+        <a target="_blank"
+            href="https://www.flaticon.com/free-icon/paper-clip_876210?term=clips&page=1&position=5&origin=tag&related_id=876210">https://www.flaticon.com/free-icon/paper-clip_876210?term=clips&page=1&position=5&origin=tag&related_id=876210</a><br>
+        <br>
+        visibility.png<br>
+        <a target="_blank"
+            href="https://www.flaticon.com/free-icon/visibility_565654?term=visible&page=1&position=6&origin=search&related_id=565654">https://www.flaticon.com/free-icon/visibility_565654?term=visible&page=1&position=6&origin=search&related_id=565654</a><br>
+        <br>
+        bin.png<br>
+        <a target="_blank"
+            href="https://www.flaticon.com/free-icon/bin_484611?term=delete&page=1&position=5&origin=search&related_id=484611">https://www.flaticon.com/free-icon/bin_484611?term=delete&page=1&position=5&origin=search&related_id=484611</a><br>
+        <br>
+        instagram<br>
+        <a target="_blank"
+            href="https://www.flaticon.com/free-icon/instagram_2111463?term=sns&page=1&position=23&origin=search&related_id=2111463">https://www.flaticon.com/free-icon/instagram_2111463?term=sns&page=1&position=23&origin=search&related_id=2111463</a><br>
+        <br>
+        soundcloud<br>
+        <a target="_blank"
+            href="https://www.flaticon.com/free-icon/soundcloud_145809?term=soundcloud&page=1&position=4&origin=search&related_id=145809">https://www.flaticon.com/free-icon/soundcloud_145809?term=soundcloud&page=1&position=4&origin=search&related_id=145809</a><br>
+        <br>
+        github<br>
+        <a target="_blank"
+            href="https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609">https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609</a><br>
         <br>
         <br>
-        
+
     </div>
-<body>
 </body>
 <script type="module" src="./1.0.0/app.js"></script>
 </html>
