--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="google-site-verification" content="Q7tRvlfpQsrovLAaBNe02QOqVOv1ln7_SDbuENjQDNI" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <link rel="stylesheet" href="./index.css?1.0.0">
+    <link rel="stylesheet" href="./index.css?1.0.1">
     <style>
         .aboutPage {
             display: none;
@@ -85,8 +85,8 @@
             href="https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609">https://www.flaticon.com/free-icon/github_733609?term=github&page=1&position=5&origin=search&related_id=733609</a><br>
         <br>
         <br>
-
+        <button id="login-bt">login</button>
     </div>
 </body>
-<script type="module" src="./1.0.0/app.js"></script>
+<script type="module" src="./1.0.1/app.js"></script>
 </html>
